--- a/html5/test/examples/custom_skin.html
+++ b/html5/test/examples/custom_skin.html
@@ -2,197 +2,304 @@
 <html>
     <head>
         <title>Custom skin</title>
-    </head>
-    <body>
-        <h1>Custom Player Skin</h1>
-        <p>
-            A setup with MP4 video and custom player skin. Any JW Player PNG skin is supported!
-        </p>
         <script type="text/javascript" src="../../../js/bin-debug/jwplayer.js">
         </script>
         <script type="text/javascript" src="../../bin-debug/jwplayer.html5.js">
         </script>
+    </head>
+    <body>
+        <h1>Custom Player Skin</h1>
+        <p>
+            This sets up a player for each open source skin. The player will be setup with multiple sources, so it should play in IE9, FF, Chrome, Safari, and Opera. IE < 9 will simply display "HTML5 Player should replace this".
+        </p>
+        <p>
+            Beelden
+        </p>
         <div height="270" id="beelden" width="480">
+            HTML5 Player should replace this
         </div>
         <script type="text/javascript">
             var beelden = new jwplayer.html5(document.getElementById("beelden"));
             beelden.setup({
-            	file: "../../../js/test/files/bunny.mp4",
+            	levels: [{
+            		file: "../../../js/test/files/bunny.mp4"
+            	}, {
+            		file: "../../../js/test/files/bunny.ogv"
+            	}],
             	image: "../../../js/test/files/bunny.jpg",
             	skin: "../../../../skins/beelden/beelden.xml"
             });
         </script>
+        <p>
+            Bekle
+        </p>
         <div height="270" id="bekle" width="480">
+            HTML5 Player should replace this
         </div>
         <script type="text/javascript">
             var bekle = new jwplayer.html5(document.getElementById("bekle"));
             bekle.setup({
-            	file: "../../../js/test/files/bunny.mp4",
+            	levels: [{
+            		file: "../../../js/test/files/bunny.mp4"
+            	}, {
+            		file: "../../../js/test/files/bunny.ogv"
+            	}],
             	image: "../../../js/test/files/bunny.jpg",
             	skin: "../../../../skins/bekle/bekle.xml"
             });
         </script>
+        <p>
+            Classic
+        </p>
         <div height="270" id="classic" width="480">
+            HTML5 Player should replace this
         </div>
         <script type="text/javascript">
             var classic = new jwplayer.html5(document.getElementById("classic"));
             classic.setup({
-            	file: "../../../js/test/files/bunny.mp4",
+            	levels: [{
+            		file: "../../../js/test/files/bunny.mp4"
+            	}, {
+            		file: "../../../js/test/files/bunny.ogv"
+            	}],
             	image: "../../../js/test/files/bunny.jpg",
             	skin: "../../../../skins/classic/classic.xml"
             });
         </script>
+        <p>
+            Five
+        </p>
         <div height="270" id="five" width="480">
+            HTML5 Player should replace this
         </div>
         <script type="text/javascript">
             var five = new jwplayer.html5(document.getElementById("five"));
             five.setup({
-            	file: "../../../js/test/files/bunny.mp4",
+            	levels: [{
+            		file: "../../../js/test/files/bunny.mp4"
+            	}, {
+            		file: "../../../js/test/files/bunny.ogv"
+            	}],
             	image: "../../../js/test/files/bunny.jpg",
             	skin: "../../../../skins/five/five.xml"
             });
         </script>
+        <p>
+            Glow
+        </p>
         <div height="270" id="glow" width="480">
+            HTML5 Player should replace this
         </div>
         <script type="text/javascript">
             var glow = new jwplayer.html5(document.getElementById("glow"));
             glow.setup({
-            	file: "../../../js/test/files/bunny.mp4",
+            	levels: [{
+            		file: "../../../js/test/files/bunny.mp4"
+            	}, {
+            		file: "../../../js/test/files/bunny.ogv"
+            	}],
             	image: "../../../js/test/files/bunny.jpg",
             	skin: "../../../../skins/glow/glow.xml"
             });
         </script>
+        <p>
+            Grungetape
+        </p>
         <div height="270" id="grungetape" width="480">
+            HTML5 Player should replace this
         </div>
         <script type="text/javascript">
             var grungetape = new jwplayer.html5(document.getElementById("grungetape"));
             grungetape.setup({
-            	file: "../../../js/test/files/bunny.mp4",
+            	levels: [{
+            		file: "../../../js/test/files/bunny.mp4"
+            	}, {
+            		file: "../../../js/test/files/bunny.ogv"
+            	}],
             	image: "../../../js/test/files/bunny.jpg",
             	skin: "../../../../skins/grungetape/grungetape.xml"
             });
         </script>
+        <p>
+            Icecreamsneaka
+        </p>
         <div height="270" id="icecreamsneaka" width="480">
+            HTML5 Player should replace this
         </div>
         <script type="text/javascript">
             var icecreamsneaka = new jwplayer.html5(document.getElementById("icecreamsneaka"));
             icecreamsneaka.setup({
-            	file: "../../../js/test/files/bunny.mp4",
+            	levels: [{
+            		file: "../../../js/test/files/bunny.mp4"
+            	}, {
+            		file: "../../../js/test/files/bunny.ogv"
+            	}],
             	image: "../../../js/test/files/bunny.jpg",
             	skin: "../../../../skins/icecreamsneaka/icecreamsneaka.xml"
             });
         </script>
+        <p>
+            Kleur
+        </p>
         <div height="270" id="kleur" width="480">
+            HTML5 Player should replace this
         </div>
         <script type="text/javascript">
             var kleur = new jwplayer.html5(document.getElementById("kleur"));
             kleur.setup({
-            	file: "../../../js/test/files/bunny.mp4",
+            	levels: [{
+            		file: "../../../js/test/files/bunny.mp4"
+            	}, {
+            		file: "../../../js/test/files/bunny.ogv"
+            	}],
             	image: "../../../js/test/files/bunny.jpg",
             	skin: "../../../../skins/kleur/kleur.xml"
             });
         </script>
+        <p>
+            Lulu
+        </p>
         <div height="270" id="lulu" width="480">
+            HTML5 Player should replace this
         </div>
         <script type="text/javascript">
             var lulu = new jwplayer.html5(document.getElementById("lulu"));
             lulu.setup({
-            	file: "../../../js/test/files/bunny.mp4",
+            	levels: [{
+            		file: "../../../js/test/files/bunny.mp4"
+            	}, {
+            		file: "../../../js/test/files/bunny.ogv"
+            	}],
             	image: "../../../js/test/files/bunny.jpg",
             	skin: "../../../../skins/lulu/lulu.xml"
             });
         </script>
+        <p>
+            Modieus
+        </p>
         <div height="270" id="modieus" width="480">
+            HTML5 Player should replace this
         </div>
         <script type="text/javascript">
             var modieus = new jwplayer.html5(document.getElementById("modieus"));
             modieus.setup({
-            	file: "../../../js/test/files/bunny.mp4",
+            	levels: [{
+            		file: "../../../js/test/files/bunny.mp4"
+            	}, {
+            		file: "../../../js/test/files/bunny.ogv"
+            	}],
             	image: "../../../js/test/files/bunny.jpg",
             	skin: "../../../../skins/modieus/modieus.xml"
             });
         </script>
+        <p>
+            Nacht
+        </p>
         <div height="270" id="nacht" width="480">
+            HTML5 Player should replace this
         </div>
         <script type="text/javascript">
             var nacht = new jwplayer.html5(document.getElementById("nacht"));
             nacht.setup({
-            	file: "../../../js/test/files/bunny.mp4",
+            	levels: [{
+            		file: "../../../js/test/files/bunny.mp4"
+            	}, {
+            		file: "../../../js/test/files/bunny.ogv"
+            	}],
             	image: "../../../js/test/files/bunny.jpg",
             	skin: "../../../../skins/nacht/nacht.xml"
             });
         </script>
+        <p>
+            PSlaycasso
+        </p>
         <div height="270" id="playcasso" width="480">
+            HTML5 Player should replace this
         </div>
         <script type="text/javascript">
             var playcasso = new jwplayer.html5(document.getElementById("playcasso"));
             playcasso.setup({
-            	file: "../../../js/test/files/bunny.mp4",
+            	levels: [{
+            		file: "../../../js/test/files/bunny.mp4"
+            	}, {
+            		file: "../../../js/test/files/bunny.ogv"
+            	}],
             	image: "../../../js/test/files/bunny.jpg",
             	skin: "../../../../skins/playcasso/playcasso.xml"
             });
         </script>
+        <p>
+            Schoon
+        </p>
         <div height="270" id="schoon" width="480">
+            HTML5 Player should replace this
         </div>
         <script type="text/javascript">
             var schoon = new jwplayer.html5(document.getElementById("schoon"));
             schoon.setup({
-            	file: "../../../js/test/files/bunny.mp4",
+            	levels: [{
+            		file: "../../../js/test/files/bunny.mp4"
+            	}, {
+            		file: "../../../js/test/files/bunny.ogv"
+            	}],
             	image: "../../../js/test/files/bunny.jpg",
             	skin: "../../../../skins/schoon/schoon.xml"
             });
         </script>
+        <p>
+            Snel
+        </p>
         <div height="270" id="snel" width="480">
+            HTML5 Player should replace this
         </div>
         <script type="text/javascript">
             var snel = new jwplayer.html5(document.getElementById("snel"));
             snel.setup({
-            	file: "../../../js/test/files/bunny.mp4",
+            	levels: [{
+            		file: "../../../js/test/files/bunny.mp4"
+            	}, {
+            		file: "../../../js/test/files/bunny.ogv"
+            	}],
             	image: "../../../js/test/files/bunny.jpg",
             	skin: "../../../../skins/snel/snel.xml"
             });
         </script>
+        <p>
+            Stijl
+        </p>
         <div height="270" id="stijl" width="480">
+            HTML5 Player should replace this
         </div>
         <script type="text/javascript">
             var stijl = new jwplayer.html5(document.getElementById("stijl"));
             stijl.setup({
-            	file: "../../../js/test/files/bunny.mp4",
+            	levels: [{
+            		file: "../../../js/test/files/bunny.mp4"
+            	}, {
+            		file: "../../../js/test/files/bunny.ogv"
+            	}],
             	image: "../../../js/test/files/bunny.jpg",
             	skin: "../../../../skins/stijl/stijl.xml"
             });
         </script>
+        <p>
+            Stormtrooper
+        </p>
         <div height="270" id="stormtrooper" width="480">
+            HTML5 Player should replace this
         </div>
         <script type="text/javascript">
             var stormtrooper = new jwplayer.html5(document.getElementById("stormtrooper"));
             stormtrooper.setup({
-            	file: "../../../js/test/files/bunny.mp4",
+            	levels: [{
+            		file: "../../../js/test/files/bunny.mp4"
+            	}, {
+            		file: "../../../js/test/files/bunny.ogv"
+            	}],
             	image: "../../../js/test/files/bunny.jpg",
             	skin: "../../../../skins/stormtrooper/stormtrooper.xml"
             });
         </script>
         <h3>HTML code</h3>
-        <p>
-            Here is the code for this setup. Make sure to change all links to the scripts, player, skin, image and video. They must refer to the correct files on your server.
-        </p>
-        <p>
-            First, place this code in the <em>&lt;head&gt;</em>
-            of your page:
-        </p>
-        <pre>&lt;script type="text/javascript" src="/scripts/jquery.js"&gt;&lt;/script&gt;
-&lt;script type="text/javascript" src="/scripts/jquery.jwplayer.js"&gt;&lt;/script&gt;</pre>
-        <p>
-            Second, place this code where you want the video to appear:
-        </p>
-        <pre>&lt;video height="270" id="player" poster="/files/bunny.mp4"
-  src="/files/bunny.mp4" width="480"&gt;
-
-&lt;script type="text/javascript"&gt;
-  $('#player').jwplayer({
-    flashplayer:'/files/player.swf',
-    skin:'/files/stormtrooper.xml'
-});
-&lt;/script&gt;</pre>
     </body>
 </html>
