--- a/html5/test/examples/index.html
+++ b/html5/test/examples/index.html
@@ -9,8 +9,9 @@
 		<script type="text/javascript">
 			var list = document.getElementById("examples");
 			var examples = {
-				"Video tag embed": "videotag.html",
+				"Page with no document type": "nodoctype.html",
 				"Object and embed tags": "objectembed.html",
+				"Video tag embed": "videotag.html",
 				"Single MP4": "single_mp4.html",
 				"Single OGV": "single_ogg.html",
 				"YouTube":"youtube.html",
@@ -19,10 +20,10 @@
 				"Custom Skin": "custom_skin.html",
 				"Multiple players with custom skins": "multiple_customs.html",
 				"Playlists": "playlist.html",
-				"Controlbar": "controlbar.html",
-				"Logo": "logo.html",
-				"API": "api.html",
-				"Event listeners": "listeners.html"
+				"Controlbar": "controlbar.html"
+				//"Logo": "logo.html",
+				//"API": "api.html",
+				//"Event listeners": "listeners.html"
 			};
 			for (var example in examples){
 				var listItem = document.createElement("li");
