--- a/html5/test/examples/listeners.html
+++ b/html5/test/examples/listeners.html
@@ -1,1 +1,79 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<html>
+    <head>
+        <title>Listeners</title>
+        <script type="text/javascript" src="../../../js/bin-debug/jwplayer.js">
+        </script>
+        <script type="text/javascript" src="../../bin-debug/jwplayer.html5.js">
+        </script>
+    </head>
+    <body>
+        <h1>Listeners</h1>
+        <p>
+            This tests adding listeners to the player and responding to events. Video should play on FF, Chrome, Safari, and Opera but will fail in IE.
+        </p>
+        <div height="270" id="player" width="480">
+        </div>
+        <h2>Events</h2>
+        <p>
+            <table id="events">
+                <tr>
+                    <td>
+                        Event
+                    </td>
+                    <td>
+                        Value
+                    </td>
+                </tr>
+            </table>
+        </p>
+        <script type="text/javascript">
+            var player = new jwplayer.html5(document.getElementById("player"));
+            player.setup({
+            	levels: [{
+            		file: "../../../js/test/files/bunny.mp4"
+            	}, {
+            		file: "../../../js/test/files/bunny.ogv"
+            	}],
+            	image: "../../../js/test/files/bunny.jpg"
+            });
+			
+			function forward(evt){
+				document.getElementById(evt.type).innerHTML = evt.data;
+			}
+			
+            var events = {
+            	JWPLAYER_READY: 'jwplayerReady',
+            	JWPLAYER_FULLSCREEN: 'jwplayerFullscreen',
+            	JWPLAYER_RESIZE: 'jwplayerResize',
+            	JWPLAYER_ERROR: 'jwplayerError',
+            	JWPLAYER_MEDIA_BUFFER: 'jwplayerMediaBuffer',
+            	JWPLAYER_MEDIA_BUFFER_FULL: 'jwplayerMediaBufferFull',
+            	JWPLAYER_MEDIA_ERROR: 'jwplayerMediaError',
+            	JWPLAYER_MEDIA_LOADED: 'jwplayerMediaLoaded',
+            	JWPLAYER_MEDIA_COMPLETE: 'jwplayerMediaComplete',
+            	JWPLAYER_MEDIA_TIME: 'jwplayerMediaTime',
+            	JWPLAYER_MEDIA_VOLUME: 'jwplayerMediaVolume',
+            	JWPLAYER_MEDIA_META: 'jwplayerMediaMeta',
+            	JWPLAYER_MEDIA_MUTE: 'jwplayerMediaMute',
+            	JWPLAYER_PLAYER_STATE: 'jwplayerPlayerState',
+            	JWPLAYER_PLAYLIST_LOADED: 'jwplayerPlaylistLoaded',
+            	JWPLAYER_PLAYLIST_ITEM: 'jwplayerPlaylistItem'
+            };
+            
+            var table = document.getElementById("events");
+            
+            for (var event in events) {
+            	var row = document.createElement("tr");
+            	var eventNameColumn = document.createElement("td");
+				eventNameColumn.innerHTML = events[event]; 
+				var eventValueColumn = document.createElement("td");
+				eventValueColumn.id = events[event];
+				row.appendChild(eventNameColumn);
+				row.appendChild(eventValueColumn);
+				player.addEventListener(events[event], forward);
+            }
+        </script>
+        <h3>HTML code</h3>
+    </body>
+</html>
