--- a/html5/test/examples/multiple_players.html
+++ b/html5/test/examples/multiple_players.html
@@ -2,63 +2,49 @@
 <html>
     <head>
         <title>Multiple Video Example</title>
-    </head>
-    <body>
-        <h1>Multiple players</h1>
-        <p>
-            Multiple players on one page. Different videos, but the same player options.
-        </p>
-        <h3>Player 1:</h3>
-        <div height="270" id="player1" width="480">
-        </div>
-        <h3>Player 2:</h3>
-        <div height="270" id="player2" width="480">
-        </div>
-        <script type="text/javascript" src="../../../js/bin-debug/jwplayer.js">
+		<script type="text/javascript" src="../../../js/bin-debug/jwplayer.js">
         </script>
         <script type="text/javascript" src="../../bin-debug/jwplayer.html5.js">
         </script>
+    </head>
+    <body>
+        <h1>Multiple players</h1>
+ 		<p>
+           This contains two players with multiple sources, so it should play back in IE9, FF, Chrome, Safari, and Opera. IE < 9 will simply display "HTML5 Player should replace this".
+        </p>
+		<p>
+			For now, same videos with same options, but this will change.
+		</p>
+        <h3>Player 1</h3>
+        <div height="270" id="player1" width="480">
+        	HTML5 Player should replace this
+        </div>
+        <h3>Player 2</h3>
+        <div height="270" id="player2" width="480">
+        	HTML5 Player should replace this
+        </div>
         <script type="text/javascript">
             var player1 = new jwplayer.html5(document.getElementById("player1"));
             player1.setup({
-            	file: "../../../js/test/files/bunny.mp4",
+            	levels: [{
+            		file: "../../../js/test/files/bunny.mp4"
+            	}, {
+            		file: "../../../js/test/files/bunny.ogv"
+            	}],
             	image: "../../../js/test/files/bunny.jpg"
             
             });
             var player2 = new jwplayer.html5(document.getElementById("player2"));
             player2.setup({
-            	file: "../../../js/test/files/oorlogswinter.mp4",
+            	levels: [{
+            		file: "../../../js/test/files/bunny.mp4"
+            	}, {
+            		file: "../../../js/test/files/bunny.ogv"
+            	}],
             	image: "../../../js/test/files/oorlogswinter.png"
             
             });
         </script>
         <h3>HTML code</h3>
-        <p>
-            Here is the code for this setup. Make sure to change all links to the scripts, player, image and video. They must refer to the correct files on your server.
-        </p>
-        <p>
-            First, place this code in the <em>&lt;head&gt;</em>
-            of your page:
-        </p>
-        <pre>&lt;script type="text/javascript" src="/scripts/jquery.js"&gt;&lt;/script&gt;
-&lt;script type="text/javascript" src="/scripts/jquery.jwplayer.js"&gt;&lt;/script&gt;</pre>
-        <p>
-            Second, place this code where you want the videos to appear:
-        </p>
-        <pre>&lt;video height="270" id="player1" src="/files/bunny.mp4" width="480" &gt;
-
-&lt;video height="270" id="player2" src="/files/corrie.mp4" width="480" &gt;
-
-&lt;script type="text/javascript"&gt;
-  $('video').jwplayer({
-    flashplayer:'/files/player.swf',
-    skin:'/files/five.xml'
-});
-&lt;/script&gt;</pre>
-        <p>
-            Note that the <i>$('video')</i>
-            part of the script ensures all video tags will be <i>upgraded</i>
-            to a JW Player. It doesn't matter how many players you have on your page.
-        </p>
     </body>
 </html>
