--- a/html5/test/examples/nodoctype.html
+++ b/html5/test/examples/nodoctype.html
@@ -1,16 +1,15 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
     <head>
-        <title>YouTube</title>
+        <title>No document type</title>
         <script type="text/javascript" src="../../../js/bin-debug/jwplayer.js">
         </script>
         <script type="text/javascript" src="../../bin-debug/jwplayer.html5.js">
         </script>
     </head>
     <body>
-        <h1>YouTube</h1>
+        <h1>No document type</h1>
         <p>
-            This sets up a YouTube player for IE9, FF, Chrome, Safari, and Opera, however, Flash must be enabled to view the video. IE < 9 will simply display "HTML5 Player should replace this".
+            This page is meant to test how the player will render in browers when no DOCTYPE is specified. It is possible that things will look slightly different in IE9, FF, Chrome, Safari, and Opera. IE < 9 will simply display "HTML5 Player should replace this".
         </p>
         <div height="270" id="player" width="480">
         	HTML5 Player should replace this
@@ -19,10 +18,14 @@
             var player = new jwplayer.html5(document.getElementById("player"));
             player.setup({
             	levels: [{
-            		file: "http://youtube.com/watch?v=IBTE-RoMsvw"
-            	}]
+            		file: "../../../js/test/files/bunny.mp4"
+            	}, {
+            		file: "../../../js/test/files/bunny.ogv"
+            	}],
+            	image: "../../../js/test/files/bunny.jpg"
             });
         </script>
         <h3>HTML code</h3>
+        
     </body>
 </html>
