--- a/html5/test/examples/controlbar.html
+++ b/html5/test/examples/controlbar.html
@@ -15,12 +15,21 @@
         <p>
             It contains three players with multiple sources, so it should play back in IE9, FF, Chrome, Safari, and Opera. IE < 9 will simply display "HTML5 Player should replace this".
         </p>
-        <div height="270" id="player3" width="480">
+		<p>
+			Controlbar top
+		</p>
+        <div height="270" id="player1" width="480">
             HTML5 Player should replace this
         </div>
+		<p>
+			Controlbar over
+		</p>
         <div height="270" id="player2" width="480">
             HTML5 Player should replace this
         </div>
+		<p>
+			Controlbar bottom
+		</p>
         <div height="270" id="player3" width="480">
             HTML5 Player should replace this
         </div>
