- Adding more test cases - Fixing display error message rendering
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1321 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/html5/test/examples/index.html
+++ b/html5/test/examples/index.html
@@ -12,6 +12,9 @@
 				"Page with no document type": "nodoctype.html",
 				"Object and embed tags": "objectembed.html",
 				"Video tag embed": "videotag.html",
+				"No file specified": "nofile.html",
+				"Invalid file path specified": "badfile.html",
+				"Invalid skin path specified": "badfile.html",
 				"Single MP4": "single_mp4.html",
 				"Single OGV": "single_ogg.html",
 				"YouTube":"youtube.html",
