- Fixing Opera playback issue
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1322 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/html5/test/examples/playlist.html
+++ b/html5/test/examples/playlist.html
@@ -18,18 +18,18 @@
             	image: "../../../js/test/files/bunny.jpg"
             }, {
             	levels: [{
-            		file: "../../../js/test/files/bunny.mp4"
+            		file: "../../../js/test/files/corrie.mp4"
             	}, {
-            		file: "../../../js/test/files/bunny.ogv"
+            		file: "../../../js/test/files/corrie.ogv"
             	}],
-            	image: "../../../js/test/files/bunny.jpg"
+            	image: "../../../js/test/files/corrie.jpg"
             }, {
             	levels: [{
-            		file: "../../../js/test/files/bunny.mp4"
+            		file: "../../../js/test/files/oorlogswinter.mp4"
             	}, {
-            		file: "../../../js/test/files/bunny.ogv"
+            		file: "../../../js/test/files/oorlogswinter.ogv"
             	}],
-            	image: "../../../js/test/files/bunny.jpg"
+            	image: "../../../js/test/files/oorlogswinter.png"
             }];
         </script>
         <h1>Playlists</h1>
