--- a/html5/test/examples/index.html
+++ b/html5/test/examples/index.html
@@ -14,7 +14,7 @@
 				"Video tag embed": "videotag.html",
 				"No file specified": "nofile.html",
 				"Invalid file path specified": "badfile.html",
-				"Invalid skin path specified": "badfile.html",
+				"Invalid skin path specified": "badskin.html",
 				"Single MP4": "single_mp4.html",
 				"Single OGV": "single_ogg.html",
 				"YouTube":"youtube.html",
