--- a/html5/test/examples/badfile.html
+++ b/html5/test/examples/badfile.html
@@ -10,7 +10,7 @@
     <body>
         <h1>Invalid file path</h1>
 		 <p>
-           This page tests to see the players behavior when it is provided with an invalid file path.
+           This page tests to see the players behavior when it is provided with an invalid file path. After hitting play, it should display an error message. 
         </p>
 		 <p>
            Players should appear in IE9, FF, Chrome, Safari, and Opera, but they will not play. IE < 9 will simply display "HTML5 Player should replace this".
