--- a/html5/test/examples/nofile.html
+++ b/html5/test/examples/nofile.html
@@ -10,7 +10,7 @@
     <body>
         <h1>No file path</h1>
 		 <p>
-           This page tests to see the players behavior when it is provided with no file path.
+           This page tests to see the players behavior when it is provided with no file path. Hitting play should leave the player in it's original state.
         </p>
 		 <p>
            Players should appear in IE9, FF, Chrome, Safari, and Opera, but they will not play. IE < 9 will simply display "HTML5 Player should replace this".
