- Fixing playlist example
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1334 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/html5/test/examples/playlist.html
+++ b/html5/test/examples/playlist.html
@@ -11,25 +11,25 @@
         <script type="text/javascript">
             var playlist = [{
             	levels: [{
-            		file: "../../../js/test/files/bunny.mp4"
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
-            		file: "../../../js/test/files/bunny.ogv"
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
             	}],
-            	image: "../../../js/test/files/bunny.jpg"
+            	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg"
             }, {
             	levels: [{
-            		file: "../../../js/test/files/corrie.mp4"
+            		file: "http://content.bitsontherun.com/videos/guYqV1AB-486405.mp4"
             	}, {
-            		file: "../../../js/test/files/corrie.ogv"
+            		file: "http://content.bitsontherun.com/videos/guYqV1AB-604476.ogv"
             	}],
-            	image: "../../../js/test/files/corrie.jpg"
+            	image: "http://content.bitsontherun.com/thumbs/guYqV1AB-480.jpg"
             }, {
             	levels: [{
-            		file: "../../../js/test/files/oorlogswinter.mp4"
+            		file: "http://content.bitsontherun.com/videos/DMJODX8R-486405.mp4"
             	}, {
-            		file: "../../../js/test/files/oorlogswinter.ogv"
+            		file: "http://content.bitsontherun.com/videos/DMJODX8R-604476.ogv"
             	}],
-            	image: "../../../js/test/files/oorlogswinter.png"
+            	image: "http://content.bitsontherun.com/thumbs/DMJODX8R-480.jpg"
             }];
         </script>
         <h1>Playlists</h1>
