- Controlbar no longer fades on exit fullscreen for positioned controlbars - Controlbar now updates next / prev visibility on playlist update - Display position in fullscreen is now OK - Error logger now displays function that caused the error - Playlist loading now handles string input with eval for arrays / object - Player now checks for resized container divs and updates its position appropriately
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1358 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/html5/test/examples/api.html
+++ b/html5/test/examples/api.html
@@ -23,7 +23,7 @@
 			<input type="text" id="controlvalue"/>
 			<a href="#" onclick="callPlayerFunction('controls', 'controlvalue');return false;">Call</a>
         </div>
-        <div id="properties" style="float:left">
+        <div style="float:right">
             <p>
                 Properties
             </p>
@@ -46,7 +46,7 @@
 				if (document.getElementById(valueid) && document.getElementById(valueid).value !== "") {
 					player[document.getElementById(functionid).value](document.getElementById(valueid).value);
 				} else {
-					player[document.getElementById(functionid).value]();
+					console.log(player[document.getElementById(functionid).value]());
 				}
 			}
             
@@ -84,16 +84,16 @@
             };
 			
 			for (var control in controls){
-				var listItem = document.createElement("select");
+				var listItem = document.createElement("option");
 				listItem.value = controls[control];
-				listItem.name = control;
+				listItem.innerHTML = control;
 				document.getElementById('controls').appendChild(listItem);
 			}
 			
 			for (var property in properties){
 				var listItem = document.createElement("option");
 				listItem.value = properties[property];
-				listItem.name = property;
+				listItem.innerHTML = property;
 				document.getElementById('properties').appendChild(listItem);
 			}
         </script>
