--- a/html5/test/examples/custom_skin.html
+++ b/html5/test/examples/custom_skin.html
@@ -27,7 +27,7 @@
             		file: "../../../js/test/files/bunny.ogv"
             	}],
             	image: "../../../js/test/files/bunny.jpg",
-            	skin: "../../../../skins/beelden/beelden.xml"
+            	skin: "../../../skins/beelden/beelden.xml"
             });
         </script>
         <p>
@@ -45,7 +45,7 @@
             		file: "../../../js/test/files/bunny.ogv"
             	}],
             	image: "../../../js/test/files/bunny.jpg",
-            	skin: "../../../../skins/bekle/bekle.xml"
+            	skin: "../../../skins/bekle/bekle.xml"
             });
         </script>
         <p>
@@ -63,7 +63,7 @@
             		file: "../../../js/test/files/bunny.ogv"
             	}],
             	image: "../../../js/test/files/bunny.jpg",
-            	skin: "../../../../skins/classic/classic.xml"
+            	skin: "../../../skins/classic/classic.xml"
             });
         </script>
         <p>
@@ -81,7 +81,7 @@
             		file: "../../../js/test/files/bunny.ogv"
             	}],
             	image: "../../../js/test/files/bunny.jpg",
-            	skin: "../../../../skins/five/five.xml"
+            	skin: "../../../skins/five/five.xml"
             });
         </script>
         <p>
@@ -99,7 +99,7 @@
             		file: "../../../js/test/files/bunny.ogv"
             	}],
             	image: "../../../js/test/files/bunny.jpg",
-            	skin: "../../../../skins/glow/glow.xml"
+            	skin: "../../../skins/glow/glow.xml"
             });
         </script>
         <p>
@@ -117,7 +117,7 @@
             		file: "../../../js/test/files/bunny.ogv"
             	}],
             	image: "../../../js/test/files/bunny.jpg",
-            	skin: "../../../../skins/grungetape/grungetape.xml"
+            	skin: "../../../skins/grungetape/grungetape.xml"
             });
         </script>
         <p>
@@ -135,7 +135,7 @@
             		file: "../../../js/test/files/bunny.ogv"
             	}],
             	image: "../../../js/test/files/bunny.jpg",
-            	skin: "../../../../skins/icecreamsneaka/icecreamsneaka.xml"
+            	skin: "../../../skins/icecreamsneaka/icecreamsneaka.xml"
             });
         </script>
         <p>
@@ -153,7 +153,7 @@
             		file: "../../../js/test/files/bunny.ogv"
             	}],
             	image: "../../../js/test/files/bunny.jpg",
-            	skin: "../../../../skins/kleur/kleur.xml"
+            	skin: "../../../skins/kleur/kleur.xml"
             });
         </script>
         <p>
@@ -171,7 +171,7 @@
             		file: "../../../js/test/files/bunny.ogv"
             	}],
             	image: "../../../js/test/files/bunny.jpg",
-            	skin: "../../../../skins/lulu/lulu.xml"
+            	skin: "../../../skins/lulu/lulu.xml"
             });
         </script>
         <p>
@@ -189,7 +189,7 @@
             		file: "../../../js/test/files/bunny.ogv"
             	}],
             	image: "../../../js/test/files/bunny.jpg",
-            	skin: "../../../../skins/modieus/modieus.xml"
+            	skin: "../../../skins/modieus/modieus.xml"
             });
         </script>
         <p>
@@ -207,7 +207,7 @@
             		file: "../../../js/test/files/bunny.ogv"
             	}],
             	image: "../../../js/test/files/bunny.jpg",
-            	skin: "../../../../skins/nacht/nacht.xml"
+            	skin: "../../../skins/nacht/nacht.xml"
             });
         </script>
         <p>
@@ -225,7 +225,7 @@
             		file: "../../../js/test/files/bunny.ogv"
             	}],
             	image: "../../../js/test/files/bunny.jpg",
-            	skin: "../../../../skins/playcasso/playcasso.xml"
+            	skin: "../../../skins/playcasso/playcasso.xml"
             });
         </script>
         <p>
@@ -243,7 +243,7 @@
             		file: "../../../js/test/files/bunny.ogv"
             	}],
             	image: "../../../js/test/files/bunny.jpg",
-            	skin: "../../../../skins/schoon/schoon.xml"
+            	skin: "../../../skins/schoon/schoon.xml"
             });
         </script>
         <p>
@@ -261,7 +261,7 @@
             		file: "../../../js/test/files/bunny.ogv"
             	}],
             	image: "../../../js/test/files/bunny.jpg",
-            	skin: "../../../../skins/snel/snel.xml"
+            	skin: "../../../skins/snel/snel.xml"
             });
         </script>
         <p>
@@ -279,7 +279,7 @@
             		file: "../../../js/test/files/bunny.ogv"
             	}],
             	image: "../../../js/test/files/bunny.jpg",
-            	skin: "../../../../skins/stijl/stijl.xml"
+            	skin: "../../../skins/stijl/stijl.xml"
             });
         </script>
         <p>
@@ -297,7 +297,7 @@
             		file: "../../../js/test/files/bunny.ogv"
             	}],
             	image: "../../../js/test/files/bunny.jpg",
-            	skin: "../../../../skins/stormtrooper/stormtrooper.xml"
+            	skin: "../../../skins/stormtrooper/stormtrooper.xml"
             });
         </script>
         <h3>HTML code</h3>
