--- a/html5/test/examples/index.html
+++ b/html5/test/examples/index.html
@@ -23,9 +23,9 @@
 				"Custom Skin": "custom_skin.html",
 				"Multiple players with custom skins": "multiple_customs.html",
 				"Playlists": "playlist.html",
-				"Controlbar": "controlbar.html"
+				"Controlbar": "controlbar.html",
 				//"Logo": "logo.html",
-				//"API": "api.html",
+				"API": "api.html"
 				//"Event listeners": "listeners.html"
 			};
 			for (var example in examples){
